// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Language List Overlay renders correctly 1`] = `
"<div class=\\"ecl-language-list ecl-language-list--overlay\\">
  <div class=\\"ecl-language-list__container ecl-container\\">
    <div class=\\"ecl-row\\">
      <div
        class=\\"ecl-language-list__close ecl-col-12 ecl-col-lg-8 ecl-offset-lg-2\\"
      >
        <button
          class=\\"ecl-button ecl-button--ghost ecl-language-list__close-button\\"
          type=\\"submit\\"
        >
          <span class=\\"ecl-button__container\\">
            <span class=\\"ecl-button__label\\">Close</span>

            <svg
              class=\\"ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after\\"
              focusable=\\"false\\"
              aria-hidden=\\"true\\"
            >
              <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--close\\"></use>
            </svg>
          </span>
        </button>
      </div>
      <div
        class=\\"ecl-language-list__title ecl-col-12 ecl-col-lg-8 ecl-offset-lg-2\\"
      >
        <svg
          class=\\"ecl-icon ecl-icon--m ecl-language-list__title-icon\\"
          focusable=\\"false\\"
          aria-hidden=\\"true\\"
        >
          <use
            xlink:href=\\"static/icons-cbfd6efe.svg#general--generic-lang\\"
          ></use>
        </svg>
        Select your language
      </div>
    </div>
    <div class=\\"ecl-row\\">
      <div
        class=\\"ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2\\"
      >
        <ul class=\\"ecl-language-list__list\\">
          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"bg\\"
              hreflang=\\"bg\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">български</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"es\\"
              hreflang=\\"es\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">español</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"cs\\"
              hreflang=\\"cs\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">čeština</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"da\\"
              hreflang=\\"da\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">dansk</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"de\\"
              hreflang=\\"de\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">Deutsch</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"et\\"
              hreflang=\\"et\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">eesti</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"el\\"
              hreflang=\\"el\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">ελληνικά</span>
            </a>
          </li>

          <li
            class=\\"ecl-language-list__item ecl-language-list__item--is-active\\"
          >
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link\\"
              lang=\\"en\\"
              hreflang=\\"en\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">English</span>
              &nbsp;

              <svg
                class=\\"ecl-icon ecl-icon--xs ecl-link__icon\\"
                focusable=\\"false\\"
                aria-hidden=\\"true\\"
                lang=\\"en\\"
                hreflang=\\"en\\"
                rel=\\"alternate\\"
              >
                <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--check\\"></use>
              </svg>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"fr\\"
              hreflang=\\"fr\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">français</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"ga\\"
              hreflang=\\"ga\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">Gaeilge</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"hr\\"
              hreflang=\\"hr\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">hrvatski</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"it\\"
              hreflang=\\"it\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">italiano</span>
            </a>
          </li>
        </ul>
      </div>
      <div class=\\"ecl-language-list__column ecl-col-12 ecl-col-lg-4\\">
        <ul class=\\"ecl-language-list__list\\">
          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"lv\\"
              hreflang=\\"lv\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">latviešu</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"lt\\"
              hreflang=\\"lt\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">lietuvių</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"hu\\"
              hreflang=\\"hu\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">magyar</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"mt\\"
              hreflang=\\"mt\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">Malti</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"nl\\"
              hreflang=\\"nl\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">Nederlands</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"pl\\"
              hreflang=\\"pl\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">polski</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"pt\\"
              hreflang=\\"pt\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">português</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"ro\\"
              hreflang=\\"ro\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">română</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"sk\\"
              hreflang=\\"sk\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">slovenčina</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"sl\\"
              hreflang=\\"sl\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">slovenščina</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"fi\\"
              hreflang=\\"fi\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">suomi</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"sv\\"
              hreflang=\\"sv\\"
              rel=\\"alternate\\"
            >
              <span class=\\"ecl-link__label\\">svenska</span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`EC - Language List Splash renders correctly 1`] = `
"<div class=\\"ecl-language-list ecl-language-list--splash\\">
  <header class=\\"ecl-language-list__header\\">
    <img
      class=\\"ecl-language-list__logo\\"
      src=\\"/static/logo--mute.svg\\"
      alt=\\"European Commission logo\\"
    />
  </header>
  <div class=\\"ecl-language-list__container ecl-container\\">
    <div class=\\"ecl-row\\">
      <div
        class=\\"ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2\\"
      >
        <ul class=\\"ecl-language-list__list\\">
          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"bg\\"
              hreflang=\\"bg\\"
            >
              <span class=\\"ecl-link__label\\">български</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"es\\"
              hreflang=\\"es\\"
            >
              <span class=\\"ecl-link__label\\">español</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"cs\\"
              hreflang=\\"cs\\"
            >
              <span class=\\"ecl-link__label\\">čeština</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"da\\"
              hreflang=\\"da\\"
            >
              <span class=\\"ecl-link__label\\">dansk</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"de\\"
              hreflang=\\"de\\"
            >
              <span class=\\"ecl-link__label\\">Deutsch</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"et\\"
              hreflang=\\"et\\"
            >
              <span class=\\"ecl-link__label\\">eesti</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"el\\"
              hreflang=\\"el\\"
            >
              <span class=\\"ecl-link__label\\">ελληνικά</span>
            </a>
          </li>

          <li
            class=\\"ecl-language-list__item ecl-language-list__item--is-active\\"
          >
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link\\"
              lang=\\"en\\"
              hreflang=\\"en\\"
            >
              <span class=\\"ecl-link__label\\">English</span>
              &nbsp;

              <svg
                class=\\"ecl-icon ecl-icon--xs ecl-link__icon\\"
                focusable=\\"false\\"
                aria-hidden=\\"true\\"
                lang=\\"en\\"
                hreflang=\\"en\\"
              >
                <use xlink:href=\\"static/icons-cbfd6efe.svg#ui--check\\"></use>
              </svg>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"fr\\"
              hreflang=\\"fr\\"
            >
              <span class=\\"ecl-link__label\\">français</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"ga\\"
              hreflang=\\"ga\\"
            >
              <span class=\\"ecl-link__label\\">Gaeilge</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"hr\\"
              hreflang=\\"hr\\"
            >
              <span class=\\"ecl-link__label\\">hrvatski</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"it\\"
              hreflang=\\"it\\"
            >
              <span class=\\"ecl-link__label\\">italiano</span>
            </a>
          </li>
        </ul>
      </div>
      <div class=\\"ecl-language-list__column ecl-col-12 ecl-col-lg-4\\">
        <ul class=\\"ecl-language-list__list\\">
          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"lv\\"
              hreflang=\\"lv\\"
            >
              <span class=\\"ecl-link__label\\">latviešu</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"lt\\"
              hreflang=\\"lt\\"
            >
              <span class=\\"ecl-link__label\\">lietuvių</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"hu\\"
              hreflang=\\"hu\\"
            >
              <span class=\\"ecl-link__label\\">magyar</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"mt\\"
              hreflang=\\"mt\\"
            >
              <span class=\\"ecl-link__label\\">Malti</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"nl\\"
              hreflang=\\"nl\\"
            >
              <span class=\\"ecl-link__label\\">Nederlands</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"pl\\"
              hreflang=\\"pl\\"
            >
              <span class=\\"ecl-link__label\\">polski</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"pt\\"
              hreflang=\\"pt\\"
            >
              <span class=\\"ecl-link__label\\">português</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"ro\\"
              hreflang=\\"ro\\"
            >
              <span class=\\"ecl-link__label\\">română</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"sk\\"
              hreflang=\\"sk\\"
            >
              <span class=\\"ecl-link__label\\">slovenčina</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"sl\\"
              hreflang=\\"sl\\"
            >
              <span class=\\"ecl-link__label\\">slovenščina</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"fi\\"
              hreflang=\\"fi\\"
            >
              <span class=\\"ecl-link__label\\">suomi</span>
            </a>
          </li>

          <li class=\\"ecl-language-list__item\\">
            <a
              href=\\"/example\\"
              class=\\"ecl-link ecl-link--standalone ecl-language-list__link\\"
              lang=\\"sv\\"
              hreflang=\\"sv\\"
            >
              <span class=\\"ecl-link__label\\">svenska</span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
"
`;
